@@ -3,7 +3,6 @@ abstract: 'Tags helpers for HTML elements.'
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
-  CSS::Struct::Output::Indent: 0
   CSS::Struct::Output::Structure: 0.03
   Data::HTML::Element::Button: 0.1
   Data::HTML::Element::Form: 0.1
