@@ -9,7 +9,6 @@ TODO
 19. Improve required CSS? There is required="required".
 20. Form: We need to have option to CSS selector for situation if obj->css_class
 not present. Probably 'form' element. Add tests.
-22. Rewrite from CSS::Struct::Output::Indent to CSS::Struct::Output::Structure.
 23.
 
 Applied
@@ -57,4 +56,7 @@ NONE [20240205] skim
 NONE [20240205] skim
 
 21. Rewrite tests from Tags::Output::Raw to Tags::Output::Structure.
+OK [20240529] skim
+
+22. Rewrite from CSS::Struct::Output::Indent to CSS::Struct::Output::Structure.
 OK [20240529] skim
