@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-use CSS::Struct::Output::Indent;
+use CSS::Struct::Output::Structure;
 use Data::HTML::Element::Option;
 use English;
 use Error::Pure::Utils qw(clean);
@@ -10,24 +10,25 @@ use Test::More 'tests' => 4;
 use Test::NoWarnings;
 
 # Test.
-my $css = CSS::Struct::Output::Indent->new;
+my $css = CSS::Struct::Output::Structure->new;
 my $option = Data::HTML::Element::Option->new;
 my $obj = Tags::HTML::Element::Option->new(
 	'css' => $css,
 );
 $obj->init($option);
 $obj->process_css;
-my $ret = $css->flush(1);
-my $right_ret = <<'END';
-END
-chomp $right_ret;
-is($ret, $right_ret, "Option defaults.");
+my $ret_ar = $css->flush(1);
+is_deeply(
+	$ret_ar,
+	[],
+	'Get CSS::Struct code (defaults).',
+);
 
 # Test.
 $obj = Tags::HTML::Element::Option->new(
 	'no_css' => 1,
 );
-$ret = $obj->process_css;
+my $ret = $obj->process_css;
 is($ret, undef, 'No css mode.');
 
 # Test.
