@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-use CSS::Struct::Output::Indent;
+use CSS::Struct::Output::Structure;
 use Data::HTML::Element::Select;
 use English;
 use Error::Pure::Utils qw(clean);
@@ -10,33 +10,35 @@ use Test::More 'tests' => 4;
 use Test::NoWarnings;
 
 # Test.
-my $css = CSS::Struct::Output::Indent->new;
+my $css = CSS::Struct::Output::Structure->new;
 my $select = Data::HTML::Element::Select->new;
 my $obj = Tags::HTML::Element::Select->new(
 	'css' => $css,
 );
 $obj->init($select);
 $obj->process_css;
-my $ret = $css->flush(1);
-my $right_ret = <<'END';
-select {
-	width: 100%;
-	padding: 12px 20px;
-	margin: 8px 0;
-	display: inline-block;
-	border: 1px solid #ccc;
-	border-radius: 4px;
-	box-sizing: border-box;
-}
-END
-chomp $right_ret;
-is($ret, $right_ret, "Select defaults.");
+my $ret_ar = $css->flush(1);
+is_deeply(
+	$ret_ar,
+	[
+		['s', 'select'],
+		['d', 'width', '100%'],
+		['d', 'padding', '12px 20px'],
+		['d', 'margin', '8px 0'],
+		['d', 'display', 'inline-block'],
+		['d', 'border', '1px solid #ccc'],
+		['d', 'border-radius', '4px'],
+		['d', 'box-sizing', 'border-box'],
+		['e'],
+	],
+	'Get CSS::Struct code (default).',
+);
 
 # Test.
 $obj = Tags::HTML::Element::Select->new(
 	'no_css' => 1,
 );
-$ret = $obj->process_css;
+my $ret = $obj->process_css;
 is($ret, undef, 'No css mode.');
 
 # Test.
